Fix scroll navbar highlighting and jump to section bugs

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ section {
   height: 100%;   
   /*width: 80%;*/
   margin: 0 auto;
+  padding-top: 50px;
   /*width: 80%;*/
 /*   padding-top: 50px; */
 /*   border: 2px solid black; */
